--- a/admin/package.json
+++ b/admin/package.json
@@ -13,6 +13,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
     "recharts": "^2.11.0",
